# Diff-TTSG

./: .gitignore  Makefile  README.md  _config.yaml  app.py  g_02500000  pyproject.toml  requirements.txt  setup.py  synthesis.ipynb
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  release-drafter.yml  test.yml
assets/css/: style.scss
configs/: train.yaml
configs/callbacks/: default.yaml  model_checkpoint.yaml
configs/data/: cormac.yaml  mnist.yaml
configs/experiment/: example.yaml
configs/hydra/: default.yaml
configs/model/: diff_ttsg.yaml
configs/trainer/: ddp.yaml  default.yaml
diff_ttsg/: eval.py  train.py
diff_ttsg/data/: cormac_datamodule.py
diff_ttsg/hifigan/: config.py  denoiser.py  meldataset.py  models.py
diff_ttsg/models/: diff_ttsg.py
diff_ttsg/models/components/: diffusion.py  text_encoder.py  transformer.py
diff_ttsg/text/: __init__.py  cleaners.py  cmudict.py  numbers.py  symbols.py
diff_ttsg/utils/: __init__.py  audio.py  instantiators.py  logging_utils.py  model.py  rich_utils.py  utils.py
diff_ttsg/utils/monotonic_align/: __init__.py  core.c
scripts/: schedule.sh
tests/: test_datamodules.py  test_eval.py  test_train.py
